# NocoDB-Data-MCP

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  LICENSE  README.md  install.sh  prepare_release.sh  pyproject.toml  requirements.txt  run_server.sh  run_server_background.sh  version_bump.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api-ref/: openapi.json  ref.md
cloudflare-examples/: cf.json.example
docs/: enhanced-tools-guide.md  testing-guide.md  usage.md  windsurf-setup.md
json-examples/: nocodb.json.example
src/nocodb_mcp/: __init__.py  server.py
testing/: test_connection.py  test_mcp_tools.py
version-control/: CHANGELOG.md
