[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nocodb-data-mcp"
version = "1.0.0"
description = "MCP server for NoCoDB operations with natural language interface"
readme = "README.md"
license = {text = "Custom"}
authors = [
    {name = "Daniel Rosehill", email = "daniel@danielrosehill.co.il"}
]
keywords = ["mcp", "nocodb", "ai", "database", "natural-language"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "asyncio-mqtt>=0.11.0"
]
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["src/nocodb_mcp"]

[project.urls]
Homepage = "https://github.com/danielrosehill/NocoDB-Data-MCP"
Repository = "https://github.com/danielrosehill/NocoDB-Data-MCP"
Issues = "https://github.com/danielrosehill/NocoDB-Data-MCP/issues"
Documentation = "https://github.com/danielrosehill/NocoDB-Data-MCP/blob/main/CONFIGURATION.md"

[project.scripts]
nocodb-mcp = "nocodb_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]
